--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
       - main
   workflow_dispatch:
 env: 
-  VERSION: '10.2.0'
+  VERSION: '11.0.0'  # Update version number to 11
 jobs: 
   build: 
     runs-on: ubuntu-latest
@@ -35,20 +35,32 @@ jobs:
             ## 更新内容
 
             ### 新的功能
-            1. **修复小米 14 之后机型 fastboot 无法刷入 super 的问题**
-            2. **调整 super 的额外空间大小**：super 的额外空间大小调整为125MB，不再为1GB。
-            3. **警告**：所有 Android 15 涉及 Apktool 的修改会导致开机异常，现在不要使用与 Apktool 修改有关的内容，建议使用 MT 管理器修改。
-            4. 修复了小米15或一加13刷入不开机？
-            5. 修复了 selinux 上下文未更新
+            1. **对重编译的 apk 进行 zipalign 优化以保证开机能够正确识别，这是一个修复的问题**
+            2. **对 Joyose 不再提供移除选项，而是修改以禁用云端控制**
+            3. **新增基于包名的应用删除功能，同时保有基于文件名称的删除逻辑**
+            4. **android 15 依赖 apktool 的修改新增临时修复方案以解决修改引起的电源键异常问题**
+            5. **payload 提取工具更新，速度提升应该有大约40%**
+            6. **新增反向移除功能，默认移除所有 apk 选项，排除你不想要移除的 apk**
+            7. **特性添加功能分解：对于 HyperOS，为 "小米智能卡支持" "高级材质支持"，而 ONEUI，为 "添加网速显示" "添加通话录音" "添加相机静音"**
+            8. **为 HyperOS 新增的修改选项 "GMS 及时推送" "禁用 Joyose 云控" "禁用 Html 查看器云控" "移除相册" "移除文件管理器" "移除智能密码管理"**
+            9. **新增对 ColorOS 的支持**
+            10. **大量移除功能调整为基于包名的新逻辑，旧逻辑仍然适配**
+            11. **为三星修复 optics.img 打包失败的问题**  # New log entry
 
             ## Release Notes
 
             ### New Features
-            1. **Fixed fastboot flashing issue for super on Xiaomi 14 and later models**
-            2. **Adjusted extra space size for super**: The extra space size for super has been adjusted to 125MB, no longer 1GB.
-            3. **Warning**: All modifications involving Apktool on Android 15 will cause boot issues. Avoid using Apktool-related modifications for now; consider using MT Manager for modifications.
-            4. Fixed the problem that Xiaomi Mi 15 or OnePlus 13 cannot boot after flashing?
-            5. Fixed selinux context not updating
+            1. **Zipalign optimization for recompiled APKs to ensure correct boot recognition; this is a fix.**
+            2. **Removal option for Joyose is no longer provided; instead, it is modified to disable cloud control.**
+            3. **New package name-based application deletion feature, while retaining the file name-based deletion logic.**
+            4. **Temporary fix for power button issues caused by modifications involving Apktool on Android 15.**
+            5. **Payload extraction tool updated, with speed improvements of about 40%.**
+            6. **New reverse removal feature, defaulting to remove all APK options, excluding those you do not want to remove.**
+            7. **Feature addition breakdown: For HyperOS, "Xiaomi Smart Card Support" and "Advanced Material Support"; for ONEUI, "Add Network Speed Display," "Add Call Recording," "Add Camera Mute."**
+            8. **New modification options for HyperOS: "GMS Timely Push," "Disable Joyose Cloud Control," "Disable HTML Viewer Cloud Control," "Remove Gallery," "Remove File Manager," "Remove Smart Password Manager."**
+            9. **Added support for ColorOS.**
+            10. **Many removal features adjusted to a new package name-based logic, while the old logic remains compatible.**
+            11. **Fixed packaging failure of optics.img for Samsung.**  # New log entry
 
       - name: Archive project
         run: zip -r UY-Sct_${{ env.VERSION }}.zip .
@@ -63,4 +75,3 @@ jobs:
           asset_path: ./UY-Sct_${{ env.VERSION }}.zip
           asset_name: UY-Sct_${{ env.VERSION }}.zip
           asset_content_type: application/zip
-
