--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
       - main
   workflow_dispatch:
 env: 
-  VERSION: '12.9.5' 
+  VERSION: '13' 
 jobs: 
   build: 
     runs-on: ubuntu-latest
@@ -34,30 +34,23 @@ jobs:
           body: |
             ## 更新内容
 
-            ### 新的功能
-            1. **快速替换逻辑调整，找到 resources/my_tools/nice_rom/quick-replace，然后建立任意文件夹，每个文件夹视为一个分组，在分组内放置同名文件或者文件夹，便会替换**
-            2. **vbmeta 校验移除改进，现在，在小米 14 之后的任何小米机型必须修改 vbmeta，否则会不开机，在之前只需 fastboot 刷入时禁用即可，现在在小米新机型中不再有任何效果**
-            3. **移除应用大部分修改为基于包名**
-            4. **修改 apk 的功能已被隐藏，由于 apktool 不修复，你只能手动通过 MT 管理器修改 apk，但是你可以参考这些修改的代码，它们还在，只是不调用**
-            5. **ext4 格式打包现在默认会保持原始大小了，如果你原本镜像提取从 ext 格式提取，那么便会保留原始大小，同时再次打包 ext4 时优先采取原始大小，如果没有，则动态计算**
-            6. **提取分区与 super 打包功能增加多选，空格分隔（提取功能的多选后续添加）**
-            7. **super 打包不再提供固定值**
-            8. **f2fs 支持保持原始大小了，如果原始大小无法打包，则使用动态计算值**
-            9. **提取分区和 super 打包列表会显示相应的文件或者目录大小（提取功能的大小显示后续添加）**
+            1. 分区打包已支持多选，现在无论是提取分区，还是打包分区，都可以多选了。  
+            2. super 打包移除固定值，现在总是动态计算或是保持原大小。  
+            3. 全局 Deodex 回来了。  
+            4. 快速替换目录调整到根目录下，这样修改更加快速。  
+            5. 提示：ONEUI 特性添加已经移除，现在变成更直观的修改选项。  
+            6. ColorOS 已添加较多精简列表应用。  
+            7. 教程更新。
 
             ## Release Notes
 
-            ### New Features
-            1. **Adjustment of quick replace logic: Find `resources/my_tools/nice_rom/quick-replace`, then create any folder. Each folder is treated as a group, and placing files or folders with the same name within the group will result in replacement.**
-            2. **Improvement in vbmeta verification removal: Now, for any Xiaomi model after Xiaomi 14, vbmeta must be modified; otherwise, it will not boot. Previously, it was sufficient to disable it during fastboot flashing, but this is no longer effective on new Xiaomi models.**
-            3. **Most application removals have been modified to be based on package names.**
-            4. **The functionality to modify APKs has been hidden. Due to the lack of fixes in apktool, you can only manually modify APKs using MT Manager. However, you can refer to the modification codes, which are still present but not invoked.**
-            5. **The ext4 format packaging now retains the original size by default. If you originally extracted the image from the ext format, the original size will be retained. At the same time, the original size will be given priority when packaging ext4 again. If not, it will be dynamically calculated.**
-            6. **Extraction and super packaging features now support multi-selection, separated by spaces (multi-selection for extraction will be added later).**
-            7. **Super packaging will no longer provide fixed values.**
-            8. **F2FS now supports retaining the original size; if the original size cannot be packaged, a dynamic calculated value will be used.**
-            9. **The extraction and super packaging lists will display the corresponding file or directory sizes (size display for extraction will be added later).**
-
+            1. Partition packaging now supports multi-selection; whether extracting or packaging partitions, multiple selections are supported.  
+            2. Fixed values removed from super packaging; it now always dynamically calculates or retains the original size.  
+            3. Global Deodex functionality has been restored.  
+            4. The quick replace directory has been moved to the root directory for faster modifications.  
+            5. Note: ONEUI feature additions have been removed and replaced with more intuitive modification options.  
+            6. Many streamlined list apps have been added to ColorOS.  
+            7. Tutorial updated.
       - name: Archive project
         run: zip -r UY-Sct_${{ env.VERSION }}.zip .
         
@@ -71,3 +64,4 @@ jobs:
           asset_path: ./UY-Sct_${{ env.VERSION }}.zip
           asset_name: UY-Sct_${{ env.VERSION }}.zip
           asset_content_type: application/zip
+
