--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
       - main
   workflow_dispatch:
 env: 
-  VERSION: '13.1'  # 更新版本号
+  VERSION: '13.5'  # Updated version number
 jobs: 
   build: 
     runs-on: ubuntu-latest
@@ -36,12 +36,15 @@ jobs:
 
             1. 分区打包已支持多选，现在无论是提取分区，还是打包分区，都可以多选了。  
             2. super 打包移除固定值，现在总是动态计算或是保持原大小。  
-            3. 全局 Deodex 回来了。  
+            3. 全局 Deodex 功能已恢复。  
             4. 快速替换目录调整到根目录下，这样修改更加快速。  
             5. 提示：ONEUI 特性添加已经移除，现在变成更直观的修改选项。  
             6. ColorOS 已添加较多精简列表应用。  
-            7. 教程更新。
-            8. 刷入脚本优化：对谷歌帐号未退出登录时的处理，以及修改 UTF-8 时不工作，以及 MTK 分区的刷入调整。
+            7. 教程再次更新。
+            8. bat 刷入脚本再次修复。
+            9. 现在无论什么情况，简易识别都会识别 optics.img 以及 vbmeta 相关的 img。
+            10. 新增卡刷脚本，你应该自行测试其是否可用。
+            11. fs 配置文件，现在被删除文件的内容会被移除。
 
             ## Release Notes
 
@@ -51,8 +54,11 @@ jobs:
             4. The quick replace directory has been moved to the root directory for faster modifications.  
             5. Note: ONEUI feature additions have been removed and replaced with more intuitive modification options.  
             6. Many streamlined list apps have been added to ColorOS.  
-            7. Tutorial updated.
-            8. Script optimization for flashing: handling cases where the Google account is not logged out and fixes for UTF-8 not working, along with adjustments for MTK partition flashing.
+            7. Tutorial updated again.
+            8. bat flashing script fixed again.
+            9. Now, under all circumstances, simple recognition will identify optics.img and vbmeta-related imgs.
+            10. Added recovery flash script; you should test its usability yourself.
+            11. In the fs configuration file, the contents of deleted files will now be removed.
 
       - name: Archive project
         run: zip -r UY-Sct_${{ env.VERSION }}.zip .
@@ -67,3 +73,4 @@ jobs:
           asset_path: ./UY-Sct_${{ env.VERSION }}.zip
           asset_name: UY-Sct_${{ env.VERSION }}.zip
           asset_content_type: application/zip
+
